# coding_agent_usage_tracker

./: Cargo.toml  README.md
scripts/: resident_daemon_smoke_test.sh
src/: main.rs
src/cli/: args.rs  daemon.rs  mod.rs
src/core/: prediction.rs
src/render/: doctor.rs
src/rich/: mod.rs
src/storage/: cache.rs  config.rs  history_schema.rs  paths.rs
tests/: history_integration_test.rs  http_client_test.rs
