[package]
name = "caut"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Coding Agent Usage Tracker - CLI for monitoring LLM provider usage"
license = "MIT"
repository = "https://github.com/Dicklesworthstone/coding_agent_usage_tracker"
keywords = ["cli", "llm", "usage", "tracking", "codex", "claude"]
categories = ["command-line-utilities"]

[[bin]]
name = "caut"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5.60", features = ["derive", "env"] }
clap_complete = "4.5.66"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.3"

# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Async runtime + HTTP
tokio = { version = "1.49", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }

# Date/time
chrono = { version = "0.4.43", features = ["serde"] }

# Platform paths and secrets
directories = "6.0.0"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native"] }

# Terminal output - using rich_rust (Rust port of Python Rich)
rich_rust = { version = "0.2.1", default-features = true }
crossterm = "0.29.0"
colored = "3.1.1"
atty = "0.2"

# TUI dashboard
ratatui = "0.30"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
which = "8.0.0"

# Regex for markup stripping
regex = "1.12.3"
futures = "0.3.32"
rusqlite = "0.38.0"

# Cryptography for credential hashing
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Filesystem watching for credential daemon
notify = "8.0"

# Test utilities (optional)
tempfile = { version = "3.25", optional = true }

[build-dependencies]
# Note: vergen-gix 9.1 requires Rust 1.88+; using 9.1 to match build.rs API
vergen-gix = { version = "9.1", features = ["build", "cargo", "rustc"] }

[features]
default = []
# Expose test utilities for integration tests
test-utils = ["tempfile"]

[dev-dependencies]
tempfile = "3.25"
jsonschema = "0.42"
wiremock = "0.6"
tokio-test = "0.4"
assert_cmd = "2.1"
predicates = "3.1"
tracing-test = "0.2"
caut = { path = ".", features = ["test-utils"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
# deny (not forbid) allows tests to use #[allow(unsafe_code)] for env var manipulation
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow async functions without await - stub functions will use async when implemented
unused_async = "allow"
